# proof

./: .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  README.rst  TODO.md  logo.tex  proof.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  stdeb.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
data/static/: sphinxcontribproof.sty
doc/: Makefile  conf.py  faq.rst  index.rst  make.bat  requirements-rtfd.txt  requirements.txt  usage.rst
doc/_static/: proof.css
doc/_templates/: layout.html
sphinxcontrib/proof/: __init__.py
sphinxcontrib/proof/data/static/: proof.css
static/: .gitignore
