[metadata]
name = sphinxcontrib-proof
version = 1.6.0
author = Louis Paternault
author_email = spalax@gresille.org
license = AGPLv3 or any later version
description = This packages contains the Proof sphinx extension, which provides directives to typeset theorems, lemmas, proofs, etc.
keywords = sphinx math proof theorem
url = https://framagit.org/spalax/sphinxcontrib-proof
project_urls =
    Documentation = http://sphinxcontrib-proof.readthedocs.io
    Source = https://framagit.org/spalax/sphinxcontrib-proof
    Tracker = https://framagit.org/spalax/sphinxcontrib-proof/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Sphinx :: Extension
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Operating System :: Unix
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Topic :: Documentation :: Sphinx
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = sphinxcontrib.proof
zip_safe = True
python_requires = >=3.8, <4
install_requires =
  jinja2
  sphinx>=1.8.0

[bdist_wheel]
python-tag=py3
